Fix navigation bar jumping issue on wide screens.
Instead of using negative margins, set the html element's width to 100vw and hide horizontal overflow to prevent the navigation bar from jumping on wide screens. This is a temporary fix, and further improvements may be needed.

--- a/frontend-next-migration/src/app/_styles/index.scss
+++ b/frontend-next-migration/src/app/_styles/index.scss
@@ -12,8 +12,9 @@
 
 @media screen and (min-width: 960px) {
   html {
-    margin-left: calc(100vw - 100%);
-    margin-right: 0;
+    width:100vw;
+    // todo may be there is a better solution, it is done to avoid navbar jumping
+    overflow-x:hidden;
   }
 }
 
